# autogenui

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/agents/: __init__.py  rpc.py  test_rpc.py
backend/src/backend/: __init__.py  main.py
frontend/: bun.lockb  package-lock.json  package.json
frontend/app/: fetchDataSC.ts  page.tsx  useQuery.ts
frontend/app/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
